# data_replay

./: .gitignore  FINAL_REFATORING_REPORT.md  GEMINI.md  PLUGINS.md  README.md  REFACTORING_SUMMARY.md  REFERENCE.md  SUMMARY.md  claude.md  demo_run.py  pyproject.toml  requirements.txt  run.py  setup_full_demo.sh
cases/case1/: case.yaml  quality_rules.json
cases/demo/: car_info.csv  case.yaml  generate_raw_data.py
cases/demo_v1/: case.yaml  generate_data.py
config/: global.yaml  logging.yaml
core/: logger.py  pipeline_runner.py  plugin_helper.py
custom_plugins/: __init__.py  custom_analyzer.py  custom_handler.py
docs/: REFERENCE.md
examples/: config_enhanced_demo.py  pythonic_di_example.py
modules/: base_plugin.py  datahub.py  initial_data_reader.py  initial_data_reader.yaml
modules/analysis/: base_analysis.py  demo_overlay.py
modules/prediction/: kalman_filter.py  kalman_filter.yaml  latency_compensator.py  simple_predictor.py
modules/quality/: base_check.py  demo_check.py  demo_check.yaml
modules/signals/: base.py  demo_signal.py
scripts/: generate_demo_data.py  generate_plugin_docs.py  generation.py
src/nexus/: cli.py
templates/: demo_case.yaml
tests/: config_enhanced_test.py  di_benchmark_test.py  di_bulk_registration_test.py  di_error_handling_test.py  di_integration_test.py  di_performance_optimization_test.py  di_performance_test.py  di_testing_example.py  di_testing_utilities_test.py  e2e_test.py  pythonic_refactoring_test.py  test_exceptions.py
utils/: config_manager.py  logger.py  pipeline_runner.py  plugin_loader.py
(+108 files in other folders)
