[project]
name = "nexus"
version = "0.1.0"
requires-python = ">=3.9"
description = "A framework for building robust, extensible, and maintainable data processing pipelines."
dependencies = [
    "pandas",
    "numpy",
    "PyYAML",
    "Pillow",
    "typer[all]",
    "pytest",
    "pytest-dependency",
    "pyarrow",
    "dependency-injector",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
data-replay = "nexus.cli:app"

